[package]
name = "becs_render"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.20.0"
profiling = { version = "*",features = ["profile-with-tracy"]}

[dependencies.becs]
git = "https://github.com/Scharps/Becs.git"
branch = "feature/system_fn"